tests/negativeTests/EndlessString.rit
a = "hello, world!
print a
